--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<link rel="icon" href="images/logo.jpg" type="image/x-icon">
+<link rel="icon" href="images/logo.jpeg" type="image/x-icon">
 <html>
 	<head>
 		<link rel="icon" href="images/logo.jpeg" type="image/x-icon">
