--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 									</p>
 								</header>
-								<a href="#" class="image main" style="display: block; text-align: center;">
+								<a href="https://github.com/UZRKHATRI29/Data-Cleaning-in-SQL" class="image main" style="display: block; text-align: center;" target="_blank">
 									<img src="images/dataclea.jpeg" alt="" class="center-image" style="width: 100%; height: auto; max-height: 450px; margin: 0 auto;">
 								</a>
 								
@@ -93,7 +93,7 @@
 										<h2>Covid 19 Data Exploration<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/covid19.jpeg" alt="" /></a>
+									<a href="https://github.com/UZRKHATRI29/COVID19-DATA-EXPLORATION" class="image fit" target="_blank"><img src="images/covid19.jpeg" alt="" /></a>
 									<p>This project revolves around an in-depth exploration of COVID-19 data solely through SQL. By harnessing the power of SQL queries and database manipulation techniques, I delved into various facets of the pandemic, such as infection rates, mortality statistics, testing trends, and geographical patterns. Through the utilization of SQL functions, joins, and aggregations. This project not only provided a comprehensive understanding of the COVID-19 landscape but also honed my SQL skills in real-world data analysis scenarios.
 
 
@@ -111,7 +111,7 @@
 										<h2>Tableau Projects<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/table.png" alt="" /></a>
+									<a href="https://public.tableau.com/app/profile/mahammad.uzer.khatri/viz/AirBnBFullProject_17151505281320/Dashboard1" class="image fit" target="_blank"><img src="images/table.png" alt="" /></a>
 									<p>This Tableau-driven project delves into Airbnb data, offering insights crucial for hosts and travelers. Through dynamic visualizations, it unveils pricing patterns, occupancy trends, and neighborhood preferences. Hosts gain actionable insights to optimize listings and pricing strategies, enhancing their competitiveness in the market. Travelers benefit from informed decision-making, aided by comprehensive neighborhood analyses and price comparisons. With Tableau's interactive dashboards, users explore spatial distribution maps.</p>
 									<ul class="actions special">
 										<li><a href = "https://public.tableau.com/app/profile/mahammad.uzer.khatri/viz/AirBnBFullProject_17151505281320/Dashboard1" class="button" target="_blank">View Project</a></li>
@@ -123,7 +123,7 @@
 										<h2>Exploratory Data Analysis<br />
 										</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pandas.jpeg" alt="" /></a>
+									<a href="https://github.com/UZRKHATRI29/Exploratory-Data-Analysis-in-Pandas" class="image fit" target="_blank"><img src="images/pandas.jpeg" alt="" /></a>
 									<p>In this project, we delve into exploratory data analysis (EDA) using the Pandas library in Python. EDA is a crucial step in understanding the characteristics and patterns within a dataset before diving into more advanced analyses or modeling.
 
 										Using real-world datasets, we explore various techniques and methods available in Pandas to gain insights into data distributions, relationships between variables, and potential outliers or anomalies. This involves summarizing data with descriptive statistics, visualizing distributions with histograms and box plots.</p>
@@ -137,7 +137,7 @@
 										<h2>Web Scrapping</a><br></h2>
 										
 									</header>
-									<a href="#" class="image fit"><img src="images/scrap.png" alt="" /></a>
+									<a href="https://github.com/UZRKHATRI29/Web-Scrapping" class="image fit"  target="_blank"><img src="images/scrap.png" alt="" /></a>
 									<p>This project focuses on extracting product information from Jumia.co.ke, an e-commerce website, using web scraping techniques. By automating the data extraction process, we aim to gather valuable insights into product availability, prices, descriptions, and customer reviews. The project involves developing a web scraping script to collect the desired data, cleaning and preprocessing the scraped data to ensure accuracy, performing exploratory data analysis to uncover trends and patterns, creating visualizations to present key findings, and documenting the entire process</p>
 									<ul class="actions special">
 										<li><a href = "https://github.com/UZRKHATRI29/Web-Scrapping" class="button" target="_blank">View Project</a></li>
